--- a/templates/loglan/choose_level.html
+++ b/templates/loglan/choose_level.html
@@ -8,10 +8,10 @@
 
   {% for course in courses %}
   <div class="row" id="yoga-margin-panel-pilih-level">
-  <div class="col-md-2"></div>
+    <div class="col-md-2"></div>
 
 
-  <div class="col-md-8 col-sm-8 col-xs-12 yoga-panel-level-python">
+    <div class="col-md-8 col-sm-8 col-xs-12 yoga-panel-level-python">
       <div class="row">
         <div class="col-md-4">
           <h3 class=yoga-panel-title>{{ course.course_name }}</h3>
@@ -23,30 +23,28 @@
 
       <div class="row">
         <div class="col-md-6">
-        <!-- kasih if kalau pernah ngerjain, mulai dari id terakhir dia ngerjain-->
           <form method="POST" action="#">
-          {% last_taken_part request.user course as last_part %}
-          {% if last_part %}
-            <a href="{% url 'loglan:course_part_detail' course_slug=course.course_slug number_part_course=last_part.number %}" class="btn btn-default" id="yoga-button-belajar">Materi</a>
-          {% else %}
-            <a href="{% url 'loglan:course_part_detail' course_slug=course.course_slug number_part_course=1 %}" class="btn btn-default" id="yoga-button-belajar">Materi</a>
-          {% endif %}
+            {% last_taken_part request.user course as last_part %}
+            {% if last_part %}
+              <a href="{% url 'loglan:course_part_detail' course_slug=course.course_slug number_part_course=last_part.number %}" class="btn btn-default" id="yoga-button-materi">Materi</a>
+            {% else %}
+              <a href="{% url 'loglan:course_part_detail' course_slug=course.course_slug number_part_course=1 %}" class="btn btn-default" id="yoga-button-materi">Materi</a>
+            {% endif %}
           </form>
         </div>
         <div class="col-md-6">
           <form method="POST" action="#">
-          {% with course.quiz.quiz_parts.all|first as first_part %}
+            {% with course.quiz.quiz_parts.all|first as first_part %}
             <a href="{% url 'loglan:quiz_part_detail' course_slug=course.course_slug number_part_quiz=first_part.number %}"
-            class="btn btn-default {% quiz_lock request.user course %}" id="yoga-button-belajar">Kuis</a>
-          {% endwith %}
+            class="btn btn-default {% quiz_lock request.user course %}" id="yoga-button-kuis">Kuis</a>
+            {% endwith %}
           </form>
         </div>
       </div>
     </div>
 
-  <div class="col-md-2"></div>
+    <div class="col-md-2"></div>
 
-  <!-- <div class="row"></br></br></br></div> -->
   </div>
   {% endfor %}
 </div>
