--- a/templates/loglan/header_footer.html
+++ b/templates/loglan/header_footer.html
@@ -5,7 +5,7 @@
 <html lang="en">
 
 <head>
-  <link rel="shortcut icon" href="{% static 'image/logo1.png'%}"/>
+  <link rel="shortcut icon" href="{% static 'image/Logo1.png'%}"/>
   <title> Log-Lan</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,28 +30,35 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        {% if user.is_authenticated %}
         <a class="navbar-brand" href="{% url 'loglan:user_main_page' %}">
-          <img id="yoga-logo" src="{% static 'image/Logo.png'%}" width="32"/>
+          <img id="yoga-logo" src="{% static 'image/Logo3.png'%}" width="32"/>
           <span id="yoga-title"> Log-Lan</span>
         </a>
+        {% else %}
+        <a class="navbar-brand" href="{% url 'loglan:home' %}">
+          <img id="yoga-logo" src="{% static 'image/Logo3.png'%}" width="32"/>
+          <span id="yoga-title"> Log-Lan</span>
+        </a>
+        {% endif %}
       </div>
 
       {% if user.is_authenticated %}
       <div class="collapse navbar-collapse" id="yoga-navbar-collapse">
         <ul class="nav navbar-nav navbar-right" >
-          <li><a href="{% url 'loglan:user_main_page' %}" class="fa fa-user-o" id="yoga-menu-navbar-kanan"> {{request.user.username}}</a></li>
-          <li><a href="{% url 'loglan:ranking' %}" class="fa fa-bar-chart" id="yoga-menu-navbar-kanan"> Peringkat</a></li>
-          <li><a href="{% url 'loglan:help' %}" class="fa fa-hand-paper-o" id="yoga-menu-navbar-kanan"> Bantuan</a></li>
-          <li><a href="/logout" class="fa fa-sign-out" id="yoga-menu-navbar-kanan"> keluar</a></li>
+          <li><a href="{% url 'loglan:user_main_page' %}" id="yoga-menu-navbar-kanan"> {{request.user.username}}</a></li>
+          <li><a href="{% url 'loglan:ranking' %}" id="yoga-menu-navbar-kanan"> Peringkat</a></li>
+          <li><a href="{% url 'loglan:help' %}" id="yoga-menu-navbar-kanan"> Bantuan</a></li>
+          <li><a href="/logout" id="yoga-menu-navbar-kanan"> Keluar</a></li>
         </ul>
       </div>
       {% else %}
       <div class="collapse navbar-collapse" id="yoga-navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="{% url 'loglan:login' %}" class="fa fa-sign-in" id="yoga-menu-navbar-kanan"> Masuk</a></li>
-          <li><a href="{% url 'loglan:signup' %}" class="fa fa-user" id="yoga-menu-navbar-kanan"> Daftar</a></li>
-          <li><a href="{% url 'loglan:home' %}" class="fa fa-question" id="yoga-menu-navbar-kanan"> Tentang</a></li>
-          <li><a href="{% url 'loglan:help' %}" class="fa fa-hand-paper-o" id="yoga-menu-navbar-kanan"> Bantuan</a></li>
+          <li><a href="{% url 'loglan:login' %}" id="yoga-menu-navbar-kanan"> Masuk</a></li>
+          <li><a href="{% url 'loglan:signup' %}" id="yoga-menu-navbar-kanan"> Daftar</a></li>
+          <li><a href="{% url 'loglan:home' %}" id="yoga-menu-navbar-kanan"> Tentang</a></li>
+          <li><a href="{% url 'loglan:help' %}" id="yoga-menu-navbar-kanan"> Bantuan</a></li>
         </ul>
       </div>
       {% endif %}
