--- a/templates/loglan/signup.html
+++ b/templates/loglan/signup.html
@@ -6,25 +6,41 @@
     window.location = "{% url 'loglan:user_main_page' %}";
   {% endif %}
 </script>
-<div class="container yoga-minimal-tinggi-halaman">
+<div class="container yoga-background-akun">
   <div class="row">
+    <div class="col-md-2"></div>
+
     <div class="col-md-4"></div>
+
     <div class="col-md-4 col-sm-4 col-xs-12">
-      <div class="panel panel-default yoga-panel">
-        <div class="panel-body">
-          <form method="POST" action=""> {% csrf_token %}
-            <div class="form-group text-center">
-              <h3 class=yoga-panel-title>Log-Lan</h3>
-            </div>
-            {{form.as_p}}
-            <div class="form-group text-center">
-              <button type="submit" class="btn btn-default yoga-button-transparent" value="Register">Daftar</button>
-            </div>
-          </form>
+      <div style="margin-top:120px;">
+        <div class="panel panel-default yoga-panel">
+          <div class="panel-body">
+            <form method="POST" action=""> {% csrf_token %}
+              <div>
+                {% for field in form %}
+                <div style="margin-top: 10px; color:white;">
+                  {{ field.label_tag|escape }}
+                </div>
+                {{ field }}
+                {% endfor %}
+              </div>
+              <div class="form-group text-center">
+                <button type="submit" class="btn btn-default" id="yoga-button-akun">Daftar</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
+      <div class="text-center">
+        <a href="{% url 'loglan:login' %}" class="yoga-keterangan-daftar-masuk">
+          <h4>Sudah daftar ?</h4>
+        </a>
+      </div>
     </div>
-    <div class="col-md-4"></div>
+
+    <div class="col-md-2"></div>
+
   </div>
 </div>
 {% endblock %}
