--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -37,12 +37,12 @@
         <div class="text-center">
           <div class="col-md-6">
             <a href="{% url 'loglan:signup' %}" class="yoga-keterangan-daftar-masuk">
-              <h4>Belum daftar ?</h4>
+              <h4>Belum daftar?</h4>
             </a>
           </div>
           <div class="col-md-6">
-            <a href="{% url 'loglan:password_reset' %}" class="yoga-keterangan-daftar-masuk">
-              <h4>Lupa password ?</h4>
+            <a href="{% url 'password_reset' %}" class="yoga-keterangan-daftar-masuk">
+              <h4>Lupa password?</h4>
             </a>
           </div>
         </div>
