--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -12,7 +12,7 @@
             {% if validlink %}
               <h3 style="color: white;">Ubah Kata Sandi</h3>
               <form method="POST">
-                <div>
+                <div class="form-group">
                   {% for field in form %}{% csrf_token %}
                   <!-- <div class="text-left" style="margin-top: 30px; color:white;"> -->
                     {{ field.label_tag|escape }}
