--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -6,21 +6,21 @@
     <div class="col-md-4"></div>
 
     <div class="col-md-4 text-center">
-      <div style="margin-top:200px;">
+      <div style="margin-top:65px;">
+        <h3 style="color:white; margin-bottom:30px;">Ubah Kata Sandi</h3>
         <div class="panel panel-default yoga-panel">
           <div class="panel-body">
             {% if validlink %}
-              <h3 style="color: white;">Ubah Kata Sandi</h3>
               <form method="POST">
                 <div class="form-group">
                   {% for field in form %}{% csrf_token %}
-                  <!-- <div class="text-left" style="margin-top: 30px; color:white;"> -->
+                  <div class="text-left" style="margin-top: 20px; color:white;">
                     {{ field.label_tag|escape }}
                     {{ field }}
-                  <!-- </div> -->
+                  </div>
                   {% endfor %}
                 </div>
-                <div class="form-group text-center">
+                <div class="text-center">
                   <button type="submit" class="btn btn-default" id="yoga-button-akun">Ubah</button>
                 </div>
               </form>
