--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,12 +1,14 @@
 {% extends 'loglan/header_footer.html' %}
 
 {% block content %}
-  <p>
-    We've emailed you instructions for setting your password, if an account exists with the email you entered.
-    You should receive them shortly.
-  </p>
-  <p>
-    If you don't receive an email, please make sure you've entered the address you registered with,
-    and check your spam folder.
-  </p>
+<div class="container-fluid yoga-background-akun">
+  <div class="text-center yoga-text-akun">
+    <p>
+      Kami telah mengirimkan email kepada Anda, yang berisi petunjuk untuk menyetel ulang kata sandi Anda.
+    </p>
+    <p>
+      Jika Anda tidak menerima email, pastikan Anda telah memasukkan alamat email yang Anda daftarkan dengan benar, dan periksa folder spam Anda.
+    </p>
+  </div>
+</div>
 {% endblock %}
