--- a/templates/loglan/signup.html
+++ b/templates/loglan/signup.html
@@ -6,13 +6,13 @@
     window.location = "{% url 'loglan:user_main_page' %}";
   {% endif %}
 </script>
-<div class="container yoga-background-akun">
+<div class="container yoga-background-akun1">
   <div class="row">
 
     <div class="col-md-4"></div>
 
     <div class="col-md-4 col-sm-4 col-xs-12">
-      <div style="margin-top:65px;">
+      <div style="margin-top:50px;">
         <div class="text-center">
           <h4 class="yoga-keterangan-masuk">Daftar akun Log-Lan</h4>
         </div>
