--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -6,20 +6,20 @@
     <div class="col-md-4"></div>
 
     <div class="col-md-4 text-center">
-      <div style="margin-top:200px;">
+      <div style="margin-top:85px;">
         <h3 style="color:white; margin-bottom:30px;">Lupa Kata Sandi</h3>
         <div class="panel panel-default yoga-panel">
           <div class="panel-body">
             <form method="POST">
               <div>
                 {% for field in form %}{% csrf_token %}
-                <div class="text-left" style="margin-top: 30px; color:white;">
+                <div class="text-left" style="margin-top: 20px; color:white;">
                   {{ field.label_tag|escape }}
                   {{ field }}
                 </div>
                 {% endfor %}
               </div>
-              <div class="form-group text-center">
+              <div class="text-center">
                 <button type="submit" class="btn btn-default" id="yoga-button-akun">Konfirmasi</button>
               </div>
             </form>
