--- a/templates/loglan/home.html
+++ b/templates/loglan/home.html
@@ -24,7 +24,7 @@
       <div class="col-md-6">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <p id="yoga-teks-penjelasan-loglan" class="text-center">Log-Lan (Logarithm-Language) adalah sebuah e-learning bahasa pemrograman python berbasis Gamification, menyediakan fitur level belajar, materi pemrograman interaktif, kuis pilihan ganda, tantangan <i>un-lock</i> materi dan kuis, poin user untuk meningkatkan rangking.</p>
+          <p id="yoga-teks-penjelasan-loglan" class="text-center">Log-Lan (Logarithm-Language) adalah sebuah e-learning bahasa pemrograman Python berbasis Gamification, menyediakan fitur level belajar, materi pemrograman interaktif, kuis pilihan ganda, tantangan <i>un-lock</i> materi dan kuis, poin user untuk meningkatkan rangking.</p>
           <div class="text-center">
             <a href="{% url 'loglan:login' %}"
               <button class="btn btn-default" id="yoga-button-akun">Mulai Belajar</button>
@@ -38,10 +38,11 @@
 
   <div class="row">
     <div id="yoga-panel-selamat-datang-abu-abu">
-      <div class="col-md-4">
+      <div class="col-md-4 text-center">
+        <img id="yoga-logo-selamat-datang" src="{% static 'image/coding.png'%}" width="128"/>
       </div>
-      <div class="col-md-8">
-        <p>Materi diberikan dalam bentuk teks tertulis, contoh program, dan user diwajibkan untuk menyelesaikan tantangan <i>coding program</i> di setiap
+      <div class="col-md-8 yoga-fitur">
+        <p>Materi belajar diberikan dalam bentuk teks tertulis, contoh program, dan user diwajibkan untuk menyelesaikan tantangan <i>coding program</i> di setiap
           materi yang diberikan, tantangan tersebut dapat diselesaikan pada <i>text editor</i> yang telah disediakan.</p>
       </div>
     </div>
@@ -49,50 +50,59 @@
 
   <div class="row">
     <div id="yoga-panel-selamat-datang-abu-abu">
-      <div class="col-md-4">
+      <div class="col-md-4 text-center">
+        <img id="yoga-logo-selamat-datang" src="{% static 'image/questions.png'%}" width="128"/>
       </div>
-      <div class="col-md-8">
-        <p>Kuis</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div id="yoga-panel-selamat-datang-abu-abu">
-      <div class="col-md-4">
-      </div>
-      <div class="col-md-8">
-        <p>Lock-Unlock</p>
+      <div class="col-md-8 yoga-fitur">
+        <p>Kuis diberikan dalam bentuk pilihan ganda. Kuis berfungsi untuk mengasah pemahaman user terhadap materi yang telah diberikan disetiap level pembelajaran.
+        Kuis dapat dikerjakan jika user telah menyelesaikan semua materi belajar pada level terkait.</p>
       </div>
     </div>
   </div>
 
   <div class="row">
     <div id="yoga-panel-selamat-datang-abu-abu">
-      <div class="col-md-4">
+      <div class="col-md-4 text-center">
+        <img id="yoga-logo-selamat-datang" src="{% static 'image/unlock.png'%}" width="128"/>
       </div>
-      <div class="col-md-8">
-        <p>Poin</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div id="yoga-panel-selamat-datang-abu-abu">
-      <div class="col-md-4">
-      </div>
-      <div class="col-md-8">
-        <p>Rangking</p>
+      <div class="col-md-8 yoga-fitur">
+        <p>Lock-Unlock materi belajar dan kuis berfungsi untuk menambah tantangan dalam proses belajar.</p>
       </div>
     </div>
   </div>
 
   <div class="row">
     <div id="yoga-panel-selamat-datang-abu-abu">
-      <div class="col-md-4">
+      <div class="col-md-4 text-center">
+        <img id="yoga-logo-selamat-datang" src="{% static 'image/poins.png'%}" width="128"/>
       </div>
-      <div class="col-md-8">
-        <p>Progres</p>
+      <div class="col-md-8 yoga-fitur">
+        <p>User dapat memperoleh poin dari setiap berhasil menyelesaikan koding program dan mengerjakan kuis</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div id="yoga-panel-selamat-datang-abu-abu">
+      <div class="col-md-4 text-center">
+        <img id="yoga-logo-selamat-datang" src="{% static 'image/ranking.png'%}" width="128"/>
+      </div>
+      <div class="col-md-8 yoga-fitur">
+        <p>Hasil proses belajar user ditampilkan dalam bentuk Rangking, sehingga user mengetahui
+        pada peringkat berapa proses belajar yang telah dilakukan. Rangking diambilkan dari total poin
+        yang dikumpulkan user</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div id="yoga-panel-selamat-datang-abu-abu">
+      <div class="col-md-4 text-center">
+        <img id="yoga-logo-selamat-datang" src="{% static 'image/progress.png'%}" width="128"/>
+      </div>
+      <div class="col-md-8 yoga-fitur">
+        <p>Progres belajar user disajikan dalam bentuk presentase progres bar. Pada setiap level pembelajaran,
+        user memiliki progres bar belajar masing-masing.</p>
       </div>
     </div>
   </div>
