--- a/templates/loglan/course_part_result.html
+++ b/templates/loglan/course_part_result.html
@@ -6,18 +6,18 @@
   <div class="yoga-text-selesai-materi">
     <p>Selamat Anda telah menyelesaikan materi pembelejaran bahasa pemrograman python level {{course.course_name}}</p>
   </div>
-  <div class="yoga-hasil-jumlah-materi">
+  <!-- <div class="yoga-hasil-jumlah-materi">
     <p>Jumlah materi yang Anda selesaikan</p>
-    <p>{{ course.course_takens.course_part.count }}</p>
-  </div>
+    
+  </div> -->
 
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <hr id="yoga-border-hasil-kuis"></hr>
     </div>
     <div class="col-md-2"></div>
-  </div>
+  </div> -->
 
   <div class="yoga-hasil-poin-materi">
     <p>Jumlah poin yang Anda dapatkan</p>
