--- a/loglan/static/css/yoga-styles.css
+++ b/loglan/static/css/yoga-styles.css
@@ -11,6 +11,9 @@ body{
   min-height: 763px;
 }
 
+.yoga-minimal-tinggi-halaman-belajar{
+  min-height: 603px;
+}
 p a{
   color: #008080;
 }
@@ -410,7 +413,7 @@ p a{
 
 .yoga-output-program{
   background-color: #17171A;
-  height: 150px;
+  height: 100px;
   color: white;
   font-size: 15px;
   padding: 13px;
@@ -448,7 +451,7 @@ p a{
 
 .yoga-tempat-materi{
   overflow-y:scroll;
-  height: 583px;
+  height: 423px;
   background-color: white;
   padding: 10px 10px;
 }
@@ -463,7 +466,7 @@ p a{
 }
 
 #yoga-panel-teks-editor{
-  height: 340px;
+  height: 243px;
   background-color: #354551;
   padding: 12px 12px;
 }
@@ -643,7 +646,7 @@ p a{
 }
 
 .yoga-text-selesai-materi{
-  margin-top: 75px;
+  margin-top: 120px;
   font-size: 24px;
   color: white;
 }
